objects/MS_Bookstore__c.object
<CustomObject>
    <description>MS Bookstores</description>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Washington</fullName>
                </value>
                <value>
                    <fullName>New York</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>MS Bookstore</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>MS Bookstore Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MS Bookstores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>